--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.tripund</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>tripund-demo</artifactId>
 	<version>0.1</version>
 	<packaging>jar</packaging>
 	<name>demo</name>
@@ -17,7 +17,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<docker.image.prefix>tripund</docker.image.prefix>
+		<docker.image.prefix>mehul400081</docker.image.prefix>
 	</properties>
 
 	
