--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.tripund</groupId>
-	<artifactId>tripund-demo</artifactId>
+	<artifactId>demo</artifactId>
 	<version>0.1</version>
 	<packaging>jar</packaging>
 	<name>demo</name>
@@ -17,7 +17,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<docker.image.prefix>mehul400081</docker.image.prefix>
+		<docker.image.prefix>tripund</docker.image.prefix>		
+		<docker.repo.username>mehul400081</docker.repo.username>
 	</properties>
 
 	
@@ -55,9 +56,22 @@
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>1.4.9</version>
+				 <executions>
+				  <execution>
+					<id>default</id>
+					<goals>
+					  <goal>build</goal>
+					  <goal>push</goal>
+					</goals>
+				  </execution>
+				</executions>
                 <configuration>
-                    <repository>${docker.image.prefix}/${project.artifactId}</repository>
-                </configuration>
+					  <repository>${docker.repo.username}/${docker.image.prefix}</repository>
+					  <tag>${project.version}</tag>
+					  <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
+					  <serverId>dockerhubCred</serverId>
+					  <registryUrl>registry.hub.docker.com/mehul400081</registryUrl>
+				</configuration>
             </plugin>
             <!-- end::plugin[] -->
 
